# vst3_c_api_generator

./: .editorconfig  .gitignore  CMakeLists.txt  Generate_Header.c  Readme.md  clang_helpers.py  create_venv.bat  data_classes.py  file_string.py  generate_header_compilation.py  header_compilation.h  interface.h  interface2.h  interface_convert.py  interface_convert_new.py  main.c  main.cpp  structs.h  test2.c  z_rebuild.bat
C_Gain_Example/: factory.c
c_gain_example/: cgain.c  factory.c
c_gain_test_plugin/: cgain.c
c_impl_test/: factory.c
generate_header/: generate_header.c
generate_header/scripts/: clang_helpers.py  data_classes.py  file_string.py  generate_header_compilation.py  interface_convert.py  pyproject.toml
generate_header/scripts/test/: test_conversion.py
generate_header/scripts/test/headers/: enums.h  interfaces.h  interfaces_expected.h  structs.h  structs_expected.h  types.h  variables.h  variables_expected.h  vst_interfaces.h  vst_interfaces_expected.h  vsttypes.h
templates/: header_compilation.h
test/: test_conversion.py  test_variables.py
test/headers/: enums.h  enums_expected.h  funknown.h  interfaces.h  interfaces_expected.h  structs_expected.h  typedefs.h  typedefs_expected.h  types.h  variables.h  variables_expected.h  vst_interfaces.h  vst_interfaces_expected.h  vsttypes.h
validate_interfaces/: cxx.cpp  main.c  test2.c
